# ChangeLog for x11-themes/xxv-skins
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-themes/xxv-skins/ChangeLog,v 1.10 2010/01/03 23:03:17 hd_brummy Exp $

*xxv-skins-1.5 (03 Jan 2010)

  03 Jan 2010; Joerg Bornkessel <hd_brummy@gentoo.org>
  -xxv-skins-1.0.1.ebuild, -xxv-skins-1.2.ebuild,
  -xxv-skins-1.2.1402.ebuild, +xxv-skins-1.5.ebuild:
  version bump; xxv-1.5 testing version; clean up

*xxv-skins-1.4 (16 Aug 2009)

  16 Aug 2009; Joerg Bornkessel <hd_brummy@gentoo.org>
  +xxv-skins-1.4.ebuild:
  version bump

*xxv-skins-1.3 (18 Apr 2009)

  18 Apr 2009; Joerg Bornkessel <hd_brummy@gentoo.org>
  +xxv-skins-1.3.ebuild:
  version bump

  12 Apr 2009; Ulrich Mueller <ulm@gentoo.org> xxv-skins-1.0.1.ebuild,
  xxv-skins-1.2.ebuild, xxv-skins-1.2.1402.ebuild:
  Update dependency on xxv, reflecting its move to www-misc, bug 265569.

*xxv-skins-1.2.1402 (06 Apr 2009)

  06 Apr 2009; Joerg Bornkessel <hd_brummy@gentoo.org>
  -xxv-skins-1.2.1359.ebuild, -xxv-skins-1.2.1383.ebuild,
  +xxv-skins-1.2.1402.ebuild:
  new (unmasked) snapshot; utf-8 support; cleanup hardmasked versions

*xxv-skins-1.2.1383 (05 Jan 2009)

  05 Jan 2009; Joerg Bornkessel <hd_brummy@gentoo.org>
  +xxv-skins-1.2.1383.ebuild:
  new test snapshot

*xxv-skins-1.2.1359 (27 Oct 2008)

  27 Oct 2008; Joerg Bornkessel <hd_brummy@gentoo.org>
  +xxv-skins-1.2.1359.ebuild:
  svn 1359 snapshot added, masked by package.mask

  04 May 2008; Samuli Suominen <drac@gentoo.org> xxv-skins-1.0.1.ebuild,
  xxv-skins-1.2.ebuild:
  Use berlios mirrors:// wrt #218657

*xxv-skins-1.2 (24 Feb 2008)

  24 Feb 2008; Joerg Bornkessel <hd_brummy@gentoo.org>
  +xxv-skins-1.2.ebuild:
  version bump

*xxv-skins-1.0.1 (05 Dec 2007)

  05 Dec 2007; Joerg Bornkessel <hd_brummy@gentoo.org> +metadata.xml,
  +xxv-skins-1.0.1.ebuild:
  initial ebuild; skins for net-www/xxv
