@@ -1,9 +1,7 @@
 DIST xxv-jason-1.5.tgz 891419 RMD160 142d83ddddafc252b995dfe3cafd381240381d94 SHA1 b9f3c4b54ba45fc8f0f42eff82dc0e06476ec5bc SHA256 8ea85c2931c74df6b70d5103af1a543240e33f70cbb56a8f6e727ffff06023ea
-DIST xxv-skins-1.3.tgz 512722 RMD160 816e5ea3e610f9f941e7065f6077bbc29b2eeb7d SHA1 542862ec3fa49ed7d844b49f7c0158176da60fac SHA256 09ca0ab51b3c57e5c25878ab56efe41796194c1af2e848b319495d6074c7c020
 DIST xxv-skins-1.4.tgz 516974 RMD160 188366844092c040c84b3cf7d3b4d05b50b88d18 SHA1 0e61002e2794155911f4639393396fbb83f6996b SHA256 c8294ad01ef2facfd5320f87f8c738b7d8a0a8747e94025ae616a2a45dfae3db
 DIST xxv-skins-1.5.tgz 535227 RMD160 31860488bf0c42dd392d473dd8a246be3830a13c SHA1 26ab93368f16f09021c30990e3ba23c0fe55fe37 SHA256 11e944766e23857a694d18907423122497a82f795b30cf4cbe27449493f3f7d1
-EBUILD xxv-skins-1.3.ebuild 594 RMD160 cf4d9304cc220f8b9fc398181e460359adafc760 SHA1 654be5c4e3a28bce74fb66cca12808f4ad015064 SHA256 d75923dc3d51c31a9124257ebd9664fc42dc1536eb7aa289d38f7c8ac14c898b
 EBUILD xxv-skins-1.4.ebuild 594 RMD160 277f545e9574961c91847085ddb09d715a849cb6 SHA1 da95fa9f64f7d31197863a2b5faaf6ad58e52406 SHA256 64f3133b8a24e99bc25aa9ae6b01a715cb6afc94af4e55704114166711ce93b6
 EBUILD xxv-skins-1.5.ebuild 686 RMD160 bf7f3abd52b23551b1867842e81b06b078a66a99 SHA1 12097480a2e122067135e97d38e4b4f14bcc5ab4 SHA256 ae2eed0e8e2c43af42369aac3380a3822ac24532e688a47d16561e976de8a4a8
-MISC ChangeLog 1896 RMD160 eb028a580d75783ebaf01f4566380ad3f2bd16f9 SHA1 f4733828265f7a16fbb81adc16eb1ab65fb6e474 SHA256 10107cb1838b4021468b57e7757187ee974615d81bd3bcd41ccbcba3f1d05e98
+MISC ChangeLog 2009 RMD160 d1b8a949b4c952c9e58e9c87b6d6132116ad3c18 SHA1 8598253d0b2e1df6cf49750106cf942b78e9ee12 SHA256 b31078be3f17e614f54645e74ceb226e2e25f4c7f3fcacd3f124bc19ce5b5ab5
 MISC metadata.xml 254 RMD160 f04eaf436b177162c4bc30410e0be18c10aa7eb8 SHA1 0eb18080a9e96806e546958b2f13a3ec24288d21 SHA256 8071ffd41e5c7bd3f22bd02b1bc6b2967a6b53836836ede58a62a99eddea2b9b
