@@ -1,6 +1,10 @@
 # ChangeLog for x11-themes/xxv-skins
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-themes/xxv-skins/ChangeLog,v 1.10 2010/01/03 23:03:17 hd_brummy Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-themes/xxv-skins/ChangeLog,v 1.11 2010/01/07 17:19:15 mr_bones_ Exp $
+
+  07 Jan 2010; Michael Sterrett <mr_bones_@gentoo.org>
+  -xxv-skins-1.3.ebuild:
+  remove old, dep-broken ebuild
 
 *xxv-skins-1.5 (03 Jan 2010)
 
